Adding BooksAndPapers/GeneralPapers/Designing\ Data-Intensive\ Applications.pdf to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-BooksAndPapers/GeneralPapers/Designing Data-Intensive Applications.pdf
+BooksAndPapers/GeneralPapers/Designing\ Data-Intensive\ Applications.pdf
